update swagger and authorization
