# cmd/api/docs/swagger.json
@@ -65,8 +65,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/dto.DashboardDTO"
                         }
                     },
                     "400": {
@@ -636,6 +635,17 @@
                 }
             }
         },
+        "dto.DashboardDTO": {
+            "type": "object",
+            "properties": {
+                "stats": {
+                    "$ref": "#/definitions/dto.StatsDTO"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.IngredientInput": {
             "type": "object",
             "required": [
@@ -659,6 +669,17 @@
             "properties": {
                 "url": {
                     "type": "string"
+                }
+            }
+        },
+        "dto.StatsDTO": {
+            "type": "object",
+            "properties": {
+                "numberOfFavorites": {
+                    "type": "integer"
+                },
+                "numberOfRecipes": {
+                    "type": "integer"
                 }
             }
         },
